--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -14,6 +14,9 @@ en:
     tag_list: "Tags"
     textbook_listing: "Textbooks"
     about: "About"
+    es: "ES"
+    jhs: "JHS"
+    grammar: "Grammar"
   activities:
     page_titles:
       new_activity: "New Activity"
