Pull a little more text out and localize it

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,7 @@
 
 en:
   hello: "Hello world!"
+  submit: "Submit"
   time:
     formats:
       quite_short: "(%B %d, %Y)"
@@ -17,6 +18,38 @@ en:
     es: "ES"
     jhs: "JHS"
     grammar: "Grammar"
+  users:
+    show:
+      title: "User info"
+      user-status: "User status: %{status}"
+      home-country: "Home country: %{country}"
+      location: "Location: %{location}"
+      bio: "User bio: %{bio}"
+      edit: "Edit info"
+      activity-list: "This user's activities:"
+    edit:
+      title: "Edit user"
+      heading: "Edit your profile"
+      username: "Username"
+      email: "E-mail address"
+      home-country: "Home country"
+      location: "Location"
+      bio: "User bio"
+  textbooks:
+    index:
+      title: "All Textbooks"
+      textbooks-heading: "Textbooks"
+  site_pages:
+    es:
+      title: Elementary School Activities
+      es-heading: Elementary School
+    jhs:
+      title: Junior High School Activities
+      jhs-heading: Junior High School
+    grammar:
+      title: Grammar points
+      grammar-heading: All grammar points
+      all-tags: View all tags
   activities:
     page_titles:
       new_activity: "New Activity"
@@ -31,6 +64,8 @@ en:
       tag_directions_2: "The more accurate your tags are, the easier people will be able to find your activity!"
       submit: "Submit"
     new_activity_header: "Make a new activity"
+    index:
+      view: "Viewers"
     edit:
       edit_heading: "Edit this activity"
       edit_directions_1: "When you submit your edits, the activity will be taken off the live site and placed back into the mod queue."
@@ -45,3 +80,11 @@ en:
       delete: "Delete"
       delete_confirmation: "Are you sure you wanna delete this one?"
       resubmit: "Edit and Re-submit"
+    thumbs-up:
+      thumbs-up-label: Thumbs up count
+      thumbs-up-logged-out: Sign in or register to give a thumbs up!
+      submit-thumbs-up: Thumbs up!
+      delete-thumbs-up: Un-thumbs up
+    school-level-listing:
+      top-activities: Top activities
+      textbooks: Textbooks
