Start branding the site as ALTopedia

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,7 +6,7 @@ en:
     formats:
       quite_short: "(%B %d, %Y)"
   layouts:
-    site_title: "ALT Activities"
+    site_title: "ALTopedia"
     log_in: "Log in"
     log_out: "Log out"
     activity_category: "Activities"
