Improve tag display a little

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -60,7 +60,7 @@ en:
       hs-heading: "High School"
     grammar:
       title: "Grammar points"
-      grammar-heading: "All grammar points"
+      grammar-heading: "Grammar points"
       all-tags: "View all tags"
     warmups:
       title: "Warm-up Activities"
