--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -98,7 +98,7 @@ ja:
       thumbs-up-label: "いいね数"
       thumbs-up-logged-out: "Sign in or register to give a thumbs up!"
       submit-thumbs-up: "いいね！"
-      delete-thumbs-up: "やっぱいいや…"
+      delete-thumbs-up: "いいね"
     school-level-listing:
       top-activities: "最大なアクティビティー"
       textbooks: "教科書"
