--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -135,3 +135,11 @@ en:
       comment-guidelines: "Please make sure your comment contains positive or constructive feedback."
       comment-placeholder: "Comment"
       please-log-in: "Sign in or register an account to leave a comment."
+  registration:
+    sign-up-heading: Make a new account
+    sign-up-info-1: Make an account at ALTopedia to post activities, vote on them, and leave comments!
+    sign-up-info-2: Registration is completely free! You can choose to delete your account later if you want.
+    sign-up-info-3: The site uses e-mail for account verification and password resets, so you'll need to provide a valid e-mail address.
+    sign-up-info-4: Choose whatever you like for your username, but please make sure it's appropriate for the site.
+    sign-up-button: Sign up
+
