--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -78,6 +78,7 @@ en:
       read-more: "Read more"
       newest-activities: "Newest activities"
       top-5-activities: "Top 5 Site-wide"
+      front-page-posts-index: "View all news posts"
     es:
       title: "Elementary School Activities"
       es-heading: "Elementary School"
@@ -171,4 +172,7 @@ en:
     sign-up-info-3: The site uses e-mail for account verification and password resets, so you'll need to provide a valid e-mail address.
     sign-up-info-4: Choose whatever you like for your username, but please make sure it's appropriate for the site.
     sign-up-button: Sign up
+  front_page_posts:
+    index:
+      title: "ALTopedia - News posts"
 
