--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -72,6 +72,7 @@ ja:
       read-more: "もっと読む"
       newest-activities: "Newest activities"
       top-5-activities: "Top 5 Site-wide"
+      front-page-posts-index: "View all news posts"
     es:
       title: "小学校"
       es-heading: "小学校"
@@ -165,6 +166,9 @@ ja:
     sign-up-info-3: The site uses e-mail for account verification and password resets, so you'll need to provide a valid e-mail address.
     sign-up-info-4: Choose whatever you like for your username, but please make sure it's appropriate for the site.
     sign-up-button: Sign up
+  front_page_posts:
+    index:
+      title: "ALTopedia - News posts"
 
   activerecord:
     errors:
