Spruce up Warm-ups page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -95,6 +95,8 @@ en:
     warmups:
       title: "ALTopedia - Warm-up Activities"
       warmups-heading: "Warm-ups"
+      top10-es: "Top 10 Elementary Warm-ups"
+      top10-jhs: "Top 10 Junior High Warm-ups"
   activities:
     page_titles:
       new_activity: "New Activity"
