Adjust navbars more and add more detail to level pages

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -9,15 +9,20 @@ en:
     site_title: "ALTopedia"
     log_in: "Log in"
     log_out: "Log out"
+    register-new-account: "Sign up"
     activity_category: "Activities"
     new-activity: "Contribute"
     view_all_activities: "View all"
     tag_list: "Tags"
     textbook_listing: "Textbooks"
     about: "About"
+    school-levels: "School levels:"
+    pre-k: "Pre-K"
     es: "ES"
     jhs: "JHS"
     hs: "HS"
+    univ: "University"
+    conversation: "Conversation"
     warm-ups: "Warm-ups"
     grammar: "Grammar"
     contributors: "Contributors"
@@ -82,12 +87,19 @@ en:
     es:
       title: "ALTopedia - Elementary School Activities"
       es-heading: "Elementary School"
+      es-explanation: "In Japan, Elementary School consists of 6 grades with students' ages ranging from about 6 to 12. The frequency and level of English classes might differ a lot from area to area. English will become a full subject for grades 5 and 6 in 2020. Elementary classes usually center on speaking."
     jhs:
       title: "ALTopedia - Junior High School Activities"
       jhs-heading: "Junior High School"
+      jhs-explanation: "In Japan, Junior High School consists of 3 grades. Students are usually between 12 and 15 years old. English is a full, required subject and consists of speaking, listening, reading, and writing practice. Much of the curriculum is designed around the grammar points and vocabulary used for school entrance exams."
     hs:
       title: "ALTopedia - High School Activities"
       hs-heading: "High School"
+      hs-explanation: "In Japan, High School consists of 3 grades. Students are usually between 15 and 18 years old. Education is no longer compulsory at this level, but most Japanese people attend high school. This level is where students begin to move into a career track, as different high schools can have different focuses. Admission is usually based on the results of entrance exams, requiring a certain score to pass."
+    conversation:
+      title: "ALTopedia - English Conversation"
+      conversation-heading: "English Conversation"
+      conversation-explanation: "These activities are for English Conversation classes. They generally apply to adults, but could be used for younger learners if they're advanced enough. The idea is to spark longer conversations entirely in English."
     grammar:
       title: "ALTopedia - Grammar points"
       grammar-heading: "Grammar points"
