Add the shoutbox link to the header

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -32,6 +32,7 @@ en:
     altto: "ALT Training Online"
     resources: "Resources"
     job-listings: "Jobs"
+    shoutbox: "Shoutbox"
   login:
     log_in: "Sign in"
     remember_me: "Remember me"
